syntax = "proto3";
package matcha.view.android;
import "gomatcha.io/matcha/pb/image.proto";
import "gomatcha.io/matcha/pb/text/text.proto";

option go_package = "android";
option objc_class_prefix = "MatchaAndroidPB";
option java_package = "io.gomatcha.matcha.pb.view.android";
option java_outer_classname = "PbStackView";

message StackChildView {
    int64 screenId = 3;
}

message StackView {
    repeated StackChildView children = 1;
    //matcha.text.TextStyle titleTextStyle = 2;
    //matcha.text.TextStyle backTextStyle = 3;
    //matcha.Color barColor = 4;
}

message StackBar {
    string title = 1;
    matcha.text.StyledText styledTitle = 6;
    string subtitle = 3;
    matcha.text.StyledText styledSubtitle = 7;
    matcha.Color color = 4;
    repeated StackBarItem items = 5;
    bool backButtonHidden = 2;
}

message StackBarItem {
    string title = 1;
    matcha.ImageOrResource icon = 3;
    matcha.Color iconTint = 2;
    bool disabled = 4;
    string onPressFunc = 5;
}

message StackEvent {
    repeated int64 id = 1;
}