syntax = "proto3";
package matcha.view.button;
import "gomatcha.io/matcha/pb/text/text.proto";
import "gomatcha.io/matcha/pb/color.proto";

option go_package = "button";
option objc_class_prefix = "MatchaButtonPB";

message View {
    matcha.text.StyledText styledText = 1;
    bool enabled = 2;
    matcha.Color color = 3;
}
